crates/dbx-sql-dialect/src/sql_dialect/snapshots/dbx_sql_dialect__sql_dialect__descriptor_snapshots__oracle_descriptor.snap
---
source: crates/dbx-sql-dialect/src/sql_dialect/descriptor_snapshots.rs
assertion_line: 31
expression: desc
---
{
  "dialect": "oracle",
  "flags": 402621423,
  "max_identifier_length": 30,
  "supports_schemas": true,
  "supports_catalogs": false,
  "max_columns_per_table": 1000,
  "max_indexes_per_table": 100,
  "max_query_size_bytes": 65536,
  "supports_full_text_index": true,
  "supports_spatial_index": true,
  "supports_partitioning": true,
  "supports_table_sampling": true,
  "max_foreign_key_name_length": 30,
  "supports_on_update_cascade": true,
  "supports_on_delete_set_null": true,
  "supports_deferrable_constraints": true,
  "supports_array_type": false,
  "supports_json_type": true,
  "supports_enum_type": false,
  "supports_uuid_type": false,
  "supports_identity_columns": true,
  "supports_auto_increment": false,
  "supports_sequences": true
}
